<resources>
    <string name="app_name">Randomizer</string>
    <string name="action_settings">Settings</string>
    <string name="action_settings_animations">Animation Settings</string>
    <string name="action_settings_layout">Layout Settings</string>
    <string name="action_settings_animations_bg">Item image / color animations</string>
    <string name="action_settings_animations_text">Item text animations</string>
    <string name="action_settings_animations_list">Other animations</string>
    <string name="action_settings_min_two_notebooks">Min. 2 columns of lists</string>
    <string name="action_settings_min_two_notes">Min. 2 columns of list items</string>
    <string name="title_activity_new_set">New Set</string>
    <string name="title">Title</string>
    <string name="ok">Okay, cool</string>
    <string name="importing">Items will be imported</string>
    <string name="import_start">Items will be imported in the background.</string>
    <string name="of">of</string>
    <string name="items">items</string>
    <string name="show_all">Show all items</string>
    <string name="import_file">Import text file</string>
    <string name="imported">Items imported</string>
    <string name="description">Description</string>
    <string name="set_preview">Set Preview</string>
    <string name="untitled">Untitled</string>
    <string name="edit">Edit</string>
    <string name="editListSuccess">Saved successfully.</string>
    <string name="newListSuccess">Set created successfully. Now, it\'s time to add some items.</string>
    <string name="newItemSuccess">Item added to set.</string>
    <string name="newListFail">An error occurred. Please try again.</string>
    <string name="title_activity_view_set" translatable="false">ViewSetActivity</string>
    <string name="shuffle">Shuffle</string>
    <string name="title_activity_items" translatable="false">ItemsActivity</string>
    <string name="item_title">Item title</string>
    <string name="new_item">New item</string>
    <string name="delete">Delete</string>
    <string name="exclude">Exclude</string>
    <string name="include">Include</string>
    <string name="no_included">You must include at least one item.</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="no_item">No items yet!</string>
    <string name="items_awaiting">Items will be added automatically.</string>
    <string name="title_activity_number" translatable="false">NumberActivity</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="decimal_places">D.</string>
    <string name="from_empty">Please enter From value</string>
    <string name="to_empty">Please enter To value</string>
    <string name="from_bigger">From value is greater than To value</string>
    <string name="share">Share</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sets_titles_1">Number</string>
    <string name="sets_titles_2">Coin</string>
    <string name="sets_titles_3">Dice</string>
    <string name="sets_titles_4">Card</string>
    <string name="sets_titles_5">Letter</string>
    <string name="sets_titles_6">Country</string>
    <string name="sets_titles_7">Color</string>
    <string name="sets_titles_8">Day of Week</string>
    <string name="sets_titles_9">Month</string>
    <string name="sets_descs_1">Generate random numbers with or without decimal places.</string>
    <string name="sets_descs_2">Heads or tails.</string>
    <string name="sets_descs_3">Roll traditional six faced dice.</string>
    <string name="sets_descs_4">Draw random cards or shuffle a deck.</string>
    <string name="sets_descs_5">Generate random Latin letters.</string>
    <string name="sets_descs_6">Random country. You never know when you will need one.</string>
    <string name="sets_descs_7">Random color with name, HTML color code and the color itself.</string>
    <string name="sets_descs_8">Draw random days or get a shuffled list.</string>
    <string name="sets_descs_9">Draw random months or get a shuffled list.</string>
    <string name="coins_titles_1">Heads</string>
    <string name="coins_titles_2">Tails</string>
    <string name="dice_titles_1">One</string>
    <string name="dice_titles_2">Two</string>
    <string name="dice_titles_3">Three</string>
    <string name="dice_titles_4">Four</string>
    <string name="dice_titles_5">Five</string>
    <string name="dice_titles_6">Six</string>
    <string name="cards_titles_1">Ace of Hearts</string>
    <string name="cards_titles_2">2 of Hearts</string>
    <string name="cards_titles_3">3 of Hearts</string>
    <string name="cards_titles_4">4 of Hearts</string>
    <string name="cards_titles_5">5 of Hearts</string>
    <string name="cards_titles_6">6 of Hearts</string>
    <string name="cards_titles_7">7 of Hearts</string>
    <string name="cards_titles_8">8 of Hearts</string>
    <string name="cards_titles_9">9 of Hearts</string>
    <string name="cards_titles_10">10 of Hearts</string>
    <string name="cards_titles_11">Jack of Hearts</string>
    <string name="cards_titles_12">Queen of Hearts</string>
    <string name="cards_titles_13">King of Hearts</string>
    <string name="cards_titles_14">Ace of Clubs</string>
    <string name="cards_titles_15">2 of Clubs</string>
    <string name="cards_titles_16">3 of Clubs</string>
    <string name="cards_titles_17">4 of Clubs</string>
    <string name="cards_titles_18">5 of Clubs</string>
    <string name="cards_titles_19">6 of Clubs</string>
    <string name="cards_titles_20">7 of Clubs</string>
    <string name="cards_titles_21">8 of Clubs</string>
    <string name="cards_titles_22">9 of Clubs</string>
    <string name="cards_titles_23">10 of Clubs</string>
    <string name="cards_titles_24">Jack of Clubs</string>
    <string name="cards_titles_25">Queen of Clubs</string>
    <string name="cards_titles_26">King of Clubs</string>
    <string name="cards_titles_27">Ace of Diamonds</string>
    <string name="cards_titles_28">2 of Diamonds</string>
    <string name="cards_titles_29">3 of Diamonds</string>
    <string name="cards_titles_30">4 of Diamonds</string>
    <string name="cards_titles_31">5 of Diamonds</string>
    <string name="cards_titles_32">6 of Diamonds</string>
    <string name="cards_titles_33">7 of Diamonds</string>
    <string name="cards_titles_34">8 of Diamonds</string>
    <string name="cards_titles_35">9 of Diamonds</string>
    <string name="cards_titles_36">10 of Diamonds</string>
    <string name="cards_titles_37">Jack of Diamonds</string>
    <string name="cards_titles_38">Queen of Diamonds</string>
    <string name="cards_titles_39">King of Diamonds</string>
    <string name="cards_titles_40">Ace of Spades</string>
    <string name="cards_titles_41">2 of Spades</string>
    <string name="cards_titles_42">3 of Spades</string>
    <string name="cards_titles_43">4 of Spades</string>
    <string name="cards_titles_44">5 of Spades</string>
    <string name="cards_titles_45">6 of Spades</string>
    <string name="cards_titles_46">7 of Spades</string>
    <string name="cards_titles_47">8 of Spades</string>
    <string name="cards_titles_48">9 of Spades</string>
    <string name="cards_titles_49">10 of Spades</string>
    <string name="cards_titles_50">Jack of Spades</string>
    <string name="cards_titles_51">Queen of Spades</string>
    <string name="cards_titles_52">King of Spades</string>
    <string name="cards_titles_53">Joker Black</string>
    <string name="cards_titles_54">Joker Red</string>
    <string name="letters_titles_1">A for Alpha</string>
    <string name="letters_titles_2">B for Bravo</string>
    <string name="letters_titles_3">C for Charlie</string>
    <string name="letters_titles_4">D for Delta</string>
    <string name="letters_titles_5">E for Echo</string>
    <string name="letters_titles_6">F for Foxtrot</string>
    <string name="letters_titles_7">G for Golf</string>
    <string name="letters_titles_8">H for Hotel</string>
    <string name="letters_titles_9">I for India</string>
    <string name="letters_titles_10">J for Juliett</string>
    <string name="letters_titles_11">K for Kilo</string>
    <string name="letters_titles_12">L for Lima</string>
    <string name="letters_titles_13">M for Mike</string>
    <string name="letters_titles_14">N for November</string>
    <string name="letters_titles_15">O for Oscar</string>
    <string name="letters_titles_16">P for Papa</string>
    <string name="letters_titles_17">Q for Quebec</string>
    <string name="letters_titles_18">R for Romeo</string>
    <string name="letters_titles_19">S for Sierra</string>
    <string name="letters_titles_20">T for Tango</string>
    <string name="letters_titles_21">U for Uniform</string>
    <string name="letters_titles_22">V for Victor</string>
    <string name="letters_titles_23">W for Whiskey</string>
    <string name="letters_titles_24">X for X-ray</string>
    <string name="letters_titles_25">Y for Yankee</string>
    <string name="letters_titles_26">Z for Zulu</string>
    <string name="days_titles_1">Sunday\ndies Solis</string>
    <string name="days_titles_2">Monday\ndies Lunae</string>
    <string name="days_titles_3">Tuesday\ndies Martis</string>
    <string name="days_titles_4">Wednesday\ndies Mercurii</string>
    <string name="days_titles_5">Thursday\ndies Jovis</string>
    <string name="days_titles_6">Friday\ndies Veneris</string>
    <string name="days_titles_7">Saturday\ndies Saturni</string>
    <string name="months_titles_1">January</string>
    <string name="months_titles_2">February</string>
    <string name="months_titles_3">March</string>
    <string name="months_titles_4">April</string>
    <string name="months_titles_5">May</string>
    <string name="months_titles_6">June</string>
    <string name="months_titles_7">July</string>
    <string name="months_titles_8">August</string>
    <string name="months_titles_9">September</string>
    <string name="months_titles_10">October</string>
    <string name="months_titles_11">November</string>
    <string name="months_titles_12">December</string>
    <string name="colors_titles_1">Alice Blue</string>
    <string name="colors_titles_2">Antique White</string>
    <string name="colors_titles_3">Aqua</string>
    <string name="colors_titles_4">Aquamarine</string>
    <string name="colors_titles_5">Azure</string>
    <string name="colors_titles_6">Beige</string>
    <string name="colors_titles_7">Bisque</string>
    <string name="colors_titles_8">Black</string>
    <string name="colors_titles_9">Blanched Almond</string>
    <string name="colors_titles_10">Blue</string>
    <string name="colors_titles_11">Blue Violet</string>
    <string name="colors_titles_12">Brown</string>
    <string name="colors_titles_13">Burly Wood</string>
    <string name="colors_titles_14">Cadet Blue</string>
    <string name="colors_titles_15">Chartreuse</string>
    <string name="colors_titles_16">Chocolate</string>
    <string name="colors_titles_17">Coral</string>
    <string name="colors_titles_18">Cornflower Blue</string>
    <string name="colors_titles_19">Cornsilk</string>
    <string name="colors_titles_20">Crimson</string>
    <string name="colors_titles_21">Cyan</string>
    <string name="colors_titles_22">Dark Blue</string>
    <string name="colors_titles_23">Dark Cyan</string>
    <string name="colors_titles_24">Dark Golden Rod</string>
    <string name="colors_titles_25">Dark Gray</string>
    <string name="colors_titles_26">Dark Green</string>
    <string name="colors_titles_27">Dark Khaki</string>
    <string name="colors_titles_28">Dark Magenta</string>
    <string name="colors_titles_29">Dark Olive Green</string>
    <string name="colors_titles_30">Dark Orange</string>
    <string name="colors_titles_31">Dark Orchid</string>
    <string name="colors_titles_32">Dark Red</string>
    <string name="colors_titles_33">Dark Salmon</string>
</resources>