<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ItemsActivity">
    <item
        android:id="@+id/action_show_all"
        android:orderInCategory="100"
        android:title="@string/show_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shuffle"
        android:orderInCategory="100"
        android:title="@string/shuffle"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_new_item"
        android:orderInCategory="100"
        android:title="@string/new_item"
        android:icon="@drawable/ic_add_list_item"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_file"
        android:orderInCategory="100"
        android:title="@string/import_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>