<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.humbleai.randomizer.SettingsActivity"
    tools:showIn="@layout/activity_settings">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:text="@string/action_settings_animations"
        style="@style/Base.TextAppearance.AppCompat.Title" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_animations_bg"
        android:id="@+id/action_settings_animations_bg"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_animations_text"
        android:id="@+id/action_settings_animations_text"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_animations_list"
        android:id="@+id/action_settings_animations_list"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextLayoutSettings"
        android:text="@string/action_settings_layout"
        style="@style/Base.TextAppearance.AppCompat.Title" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_min_two_notebooks"
        android:id="@+id/action_settings_min_two_notebooks"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings_min_two_notes"
        android:id="@+id/action_settings_min_two_notes"
        android:layout_marginBottom="8dp"/>
</LinearLayout>
