<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/title_activity_new_set"
            android:id="@+id/textViewtitlenewset"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            style="@style/Base.TextAppearance.AppCompat.Title" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/set_preview"
            android:id="@+id/textViewSetPreview"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:gravity="end" />



    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        card_view:theme="@style/CardView"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="1dp"
        card_view:cardCornerRadius="2dp">
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:paddingTop="4dp"
                android:paddingRight="4dp"
                android:paddingLeft="4dp"
                android:textSize="18sp"
                android:textColor="@color/colorTitle"
                android:text="@string/title"
                android:layout_toRightOf="@+id/imageViewSetIconPreview"
                android:layout_toEndOf="@+id/imageViewSetIconPreview"/>

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="4dp"
                android:paddingLeft="4dp"
                android:paddingBottom="4dp"
                android:textSize="14sp"
                android:text="@string/description"
                android:textColor="@color/colorDescription"
                android:layout_below="@+id/textViewTitle"
                android:layout_toRightOf="@+id/imageViewSetIconPreview"
                android:layout_toEndOf="@+id/imageViewSetIconPreview"/>

            <ImageView
                android:layout_width="64sp"
                android:layout_height="48sp"
                android:id="@+id/imageViewSetIconPreview"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="false"
                android:paddingTop="6dp"
                android:adjustViewBounds="false"
                android:layout_alignTop="@+id/textViewTitle"
                android:src="@drawable/ic_new_list_item_48dp" />


        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textPersonName"
        android:hint="@string/title"
        android:ems="10"
        android:id="@+id/editTextNewTitle" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine"
        android:hint="@string/description"
        android:ems="10"
        android:id="@+id/editTextNewDescription" />


</LinearLayout>