<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.humbleai.randomizer.NumberActivity"
    tools:showIn="@layout/activity_number"
    android:background="@color/color_card_bg" >
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:layout_marginLeft="4dp"
        card_view:theme="@style/CardView"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="1dp"
        card_view:cardCornerRadius="2dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:columnCount="3"
            android:layout_centerHorizontal="true"
            android:alignmentMode="alignBounds"
            android:rowCount="2"
            android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/from"
                    android:id="@+id/textViewFrom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/to"
                    android:id="@+id/textViewTo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/decimal_places"
                    android:id="@+id/textViewDecimalPlaces" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="12"
                android:id="@+id/editTextStartNumber"
                android:text="0"
                android:ems="3"
                android:selectAllOnFocus="true" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="12"
                android:id="@+id/editTextEndNumber"
                android:layout_gravity="center_horizontal"
                android:text="100"
                android:ems="8"
                android:selectAllOnFocus="true" />
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="1"
                    android:ems="1"
                    android:id="@+id/editTextDecimals"
                    android:selectAllOnFocus="true"
                    android:text="0" />
                
   
            
        </GridLayout>




    </android.support.v7.widget.CardView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textViewSonuc"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="false"
            android:layout_alignParentStart="true"
            android:typeface="monospace"
            android:foregroundGravity="center"
            android:gravity="center"
            android:selectAllOnFocus="true"
            android:textIsSelectable="true"
            android:layout_below="@+id/card_view"
            android:layout_alignParentBottom="true"
            style="@style/overlayText" />



</RelativeLayout>
